--- a/smartnfts/.env.local.example
+++ b/smartnfts/.env.local.example
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_TEMPLATE_CLIENT_ID="<your-client-id>"
+NEXT_PUBLIC_AIRSTACK_API_KEY="<your-airstack-api-key>"
+ENGINE_URL=
+THIRDWEB_ACCESS_TOKEN=
+BACKEND_WALLET_ADDRESS=
+NEXT_PUBLIC_NFT_CONTRACT_ADDRESS=
