--- a/smartnfts/package.json
+++ b/smartnfts/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@etherspot/prime-sdk": "^1.3.13",
     "@prisma/client": "^5.6.0",
     "@thirdweb-dev/engine": "^0.0.1",
     "@thirdweb-dev/react": "^4.1.11",
