--- a/ccip-contracts/package.json
+++ b/ccip-contracts/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
     "eth-crypto": "^2.4.0",
     "is-http-url": "^2.0.0",
     "jsrsasign": "^10.6.0",
