--- a/smartnfts/tsconfig.json
+++ b/smartnfts/tsconfig.json
@@ -13,8 +13,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "scripts/nftData.mjs"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules","node_modules/permissionless"]
 }
